Migrate OpenWeather to Open-Meteo
OpenWeather Call API is no longer free.
