# server/src/api/routes.ts
@@ -51,11 +51,16 @@ const models: TsoaRoute.Models = {
         "additionalProperties": true,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "WeatherIcon": {
+        "dataType": "refAlias",
+        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["sun"]},{"dataType":"enum","enums":["cloud-sun"]},{"dataType":"enum","enums":["cloud-sun-rain"]},{"dataType":"enum","enums":["moon"]},{"dataType":"enum","enums":["cloud-moon"]},{"dataType":"enum","enums":["cloud-moon-rain"]},{"dataType":"enum","enums":["clouds"]},{"dataType":"enum","enums":["cloud-showers"]},{"dataType":"enum","enums":["thunderstorm"]},{"dataType":"enum","enums":["snow"]},{"dataType":"enum","enums":["fog"]}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "WeatherCondition": {
         "dataType": "refObject",
         "properties": {
             "description": {"dataType":"string","required":true},
-            "icon": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["01d"]},{"dataType":"enum","enums":["02d"]},{"dataType":"enum","enums":["03d"]},{"dataType":"enum","enums":["04d"]},{"dataType":"enum","enums":["09d"]},{"dataType":"enum","enums":["10d"]},{"dataType":"enum","enums":["11d"]},{"dataType":"enum","enums":["13d"]},{"dataType":"enum","enums":["50d"]},{"dataType":"enum","enums":["01n"]},{"dataType":"enum","enums":["02n"]},{"dataType":"enum","enums":["03n"]},{"dataType":"enum","enums":["04n"]},{"dataType":"enum","enums":["09n"]},{"dataType":"enum","enums":["10n"]},{"dataType":"enum","enums":["11n"]},{"dataType":"enum","enums":["13n"]},{"dataType":"enum","enums":["50n"]}],"required":true},
+            "icon": {"ref":"WeatherIcon","required":true},
         },
         "additionalProperties": true,
     },
